# Trigram

./: CMakeLists.txt  Trigram.cpp  Trigram.h  TrigramKata.pro  TrigramTest.cpp  main.cpp
